syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "queries.proto";

import "Protos/Products/products.proto";

option csharp_namespace = "Grpc.Protos.Products";

package Grpc.Protos.Products;



service ProductServiceGrpc {

  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);

  rpc CreateProduct (CreateProductRequest) returns (GlobalGrpc.QueryStringIdResult);

  rpc CreateProductSeller (CreateProductSellerRequest) returns (GlobalGrpc.QueryStringIdResult);

}



